--- a/template-definition.yaml
+++ b/template-definition.yaml
@@ -50,7 +50,7 @@ info:
 # this key also gets mapped to the appropriate location in project.settings so
 # that the current UI can have its own workflow overridden as well.
 initialize:
-  repository: git://github.com/platformista/prestashop.git@master
+  repository: https://github.com/platformista/prestashop.git@master
   config: null
   files: []
   profile: PHP
