--- a/template-definition.yaml
+++ b/template-definition.yaml
@@ -19,7 +19,7 @@ info:
   # Unique machine name, prefaced by a vendor or organization identifier.
   # The vendor should be the lowercase name of your company, organization, or project, and the project name
   # the lowercase name of the template. This may be the same as the vendor in a single-product case.
-  id: platformista/prestashop
+  id: platformista/prestashop-psh
   # The human-readable name of the template.  This is how the template will be named in the user interface.
   name: Prestashop
   # Human-readable descriptive text for the template. Supports limited HTML.
@@ -50,7 +50,7 @@ info:
 # this key also gets mapped to the appropriate location in project.settings so
 # that the current UI can have its own workflow overridden as well.
 initialize:
-  repository: https://github.com/platformista/prestashop.git@master
+  repository: https://github.com/platformista/prestashop-psh.git@master
   config: null
   files: []
   profile: PHP
